--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Guardia</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
+
+    <canvas id="matrixCanvas"></canvas>
 
     <header class="navbar">
         <nav>
@@ -19,6 +21,13 @@
             </ul>
         </nav>
     </header>
+
+    <main class="content-section">
+        <div class="logo-container">
+            <img src="image.png" alt="Logo du Bureau des Étudiants ERROR" class="site-logo logo-bde">
+            
+            <img src="guardia-logo-104x100.png.webp" alt="Logo de l'école GUARDIA" class="site-logo logo-guardia">
+        </div>
 
     <main class="content-interior">
         <h1>Nous Contacter</h1>
@@ -35,6 +44,8 @@
             <button type="submit">Envoyer</button>
         </form>
     </main>
+
+    <script src="js1.js"></script>
 
 </body>
 </html>
