--- a/inscription.html
+++ b/inscription.html
@@ -30,8 +30,8 @@
         </div>
 
     <main class="content-interior">
-        <h1>Connexion</h1>
-        <form action="/authenticate" method="POST" class="login-form">
+        <h1>S'inscrire</h1>
+        <form action="login.html" method="POST" class="login-form">
             <label for="username">Nom d'utilisateur :</label>
             <input type="text" id="username" name="username" required>
             
@@ -39,8 +39,6 @@
             <input type="password" id="password" name="password" required>
             
             <button type="submit">Se connecter</button>
-
-            <a href="inscription.html" class="register-link">S'inscrire</a>
         </form>
     </main>
 
