--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
 
     <main class="content-interior">
         <h1>Connexion</h1>
-        <form action="/authenticate" method="POST" class="login-form">
+        <form action="connexion.php" method="POST" class="login-form">
             <label for="username">Nom d'utilisateur :</label>
             <input type="text" id="username" name="username" required>
             
@@ -40,7 +40,7 @@
             
             <button type="submit">Se connecter</button>
 
-            <a href="inscription.html" class="register-link">S'inscrire</a>
+            <a href="inscription.php" class="register-link">S'inscrire</a>
         </form>
     </main>
 
