--- a/bde.html
+++ b/bde.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html" class="nav-link">./accueil</a></li>
                 <li><a href="bde.html" class="nav-link">./BDE</a></li>
                 <li><a href="evenement.html" class="nav-link">./evenement</a></li>
-                <li><a href="contact.html" class="nav-link">./contact</a></li>
+                <li><a href="contact.php" class="nav-link">./contact</a></li>
                 <li><a href="login.php" class="nav-link">./login</a></li>
             </ul>
         </nav>
